deploy/k8s/deployment-api-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-client
  namespace: istio-test
  labels:
    app: api-client
spec:
  ports:
    - port: 8080
  selector:
    app: api-client
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-client
  namespace: istio-test
  labels:
    app: api-client
spec:
  selector:
    matchLabels:
      app: api-client
  template:
    metadata:
      labels:
        app: api-client
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: api-client
          image: api-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
