deploy/k8s/deployment-api-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: istio-test
  labels:
    app: api-server
spec:
  ports:
    - port: 8090
  selector:
    app: api-server
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: istio-test
  labels:
    app: api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8090"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: api-server
          image: api-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
