deploy/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-test-gateway
  namespace: istio-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test
  namespace: istio-test
spec:
  hosts:
    - "*"
  gateways:
    - istio-test-gateway
  http:
    - name: "api-client"
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-client.istio-test.svc.cluster.local
    - name: "api-server"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: api-server.istio-test.svc.cluster.local
